src/app/components/shared/navbar/navbar.scss
:host {
  width: 100vw;
  position: fixed;
  top: 0;
  background-color: var(--secondary-accent);
  .navbar-container {
    width: 100%;
    padding: 10px;
    display: flex;
    justify-content: space-between;
    align-items: center;
    .heading {
      margin: 0;
      border: none;
    }
    .menu-list {
      .menu-item {
        &:hover {
          color: var(--text-primary);
          cursor: pointer;
        }
      }
    }
  }
}

:host-context(.web) {
  :host {
    display: flex;
    justify-content: center;
    .navbar-container {
      max-width: 1100px;
      .menu-list {
        display: flex;
        gap: 1.5rem;
        .menu-item {
          padding: 0;
        }
      }
    }
  }
}

:host-context(.tablet),
:host-context(.mobile) {
  :host {
    .navbar-container {
      .menu-list {
        width: 250px;
        background-color: var(--secondary-accent);
        height: 100vh;
        position: fixed;
        top: 0;
        right: 0;
        z-index: 1000;
        div {
          display: flex;
          justify-content: space-between;
          align-items: center;
          margin: 10px 20px 10px 10px;
          h1 {
            color: var(--highlight-color);
            font-size: clamp(0.25rem, 5vw, 1.5rem);
          }
        }
        .list-item {
          padding: 10px 0 10px 20px;
        }
      }
    }
  }
}

:host-context(.tablet) {
  :host {
    .icon {
      margin-right: 15px;
    }
  }
}

